--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -220,7 +220,7 @@ iframe {
 
 //header
 #header {
-    position: static;
+    position: fixed;
     left: 0; top: 0;
     width: 100%;
     height: 82px;
@@ -309,5 +309,31 @@ iframe {
         &::after {
             background: $color-black;
         }
+    }
+}
+
+//main
+#mainCont {
+    background-color: $color-black;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.mainCont {
+    color: $white;
+    font-size: 9vw;
+    line-height: 0.8;
+    font-family: $font-main;
+    font-weight: normal;
+    margin-top: 6vh;
+    > div {
+        margin-bottom: 0.5vw;
+        padding-bottom: 1vw;
+    }
+    .white {
+        background-color: #fff;
+        color: #000;
+        display: inline-block;
     }
 }
